--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -92,6 +92,11 @@
   letter-spacing: 0.38px
   color: #ffffff
 
+.button__lens
+  width: 16px
+  padding-top: 4px
+  padding-right: 2px
+
 .dropdown__menu
   display: flex
   flex-direction: column
@@ -238,8 +243,7 @@
     margin-top: 20px
 
 .cards
-  &__list
-    height: 600px
+  height: 935px
   &__head
     display: flex
     flex-direction: column
@@ -266,12 +270,6 @@
   &__product
     width: 261px
     height: 279px
-    &::hover
-      box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16)
-      border: 2px solid #222222
-    &__item
-      width: 100%
-      height: 100%
     &__text
       padding-left: 20px
       padding-top: 20px
@@ -286,4 +284,71 @@
         font-size: 16px
         font-weight: 700
         text-transform: uppercase
+        &::hover
+          border: 2px solid #222222 !important
+    &__item
+      width: 100%
+      height: 100%
+
+.button__product
+  display: flex
+  justify-content: center
+  &__text
+    width: 212px
+    height: 48px
+    background-color: #f16d7f
+    border: transparent
+  &__sum
+    display: block
+    color: #ffffff
+    font-size: 16px
+    font-weight: 700
+    letter-spacing: 0.4px
+    &::-webkit-details-marker
+      display: none
+    &::after
+      content: '\2192'
+      padding-left: 0.5em
+      color: #ffffff
+
+.bigbanner
+  margin: 100px auto
+  &__item
+    display: flex
+    background-color: #222224
+  &__right
+    display: flex
+    flex-direction: column
+    width: 373px
+    &__content
+      display: flex
+      align-items: flex-start
+      justify-content: center
+      width: 81%
+      margin: 0 auto
+      padding-top: 50px
+    &__head
+      display: flex
+      padding-left: 35px
+      padding-bottom: 15px
+      color: #fbfbfb
+      font-size: 20px
+      letter-spacing: 0.5px
+      font-size: lato-bold
+    &__paragraph
+      display: flex
+      color: #fbfbfb
+      font-size: 14px
+      font-weight: 300
+      line-height: 24px
+      letter-spacing: 0.35px
+      padding-left: 35px
+      font-family: lato-light
+
+.feedback
+  background: url("/build/img/bg_footer.png") no-repeat
+  height: 438px
+  background-size: cover
+  &__item
+
 @import "media"
