--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -103,9 +103,10 @@
   border-radius: 5px
   background-color: #ffffff
   width: 262px
-  position: absolute
+  position: relative
   padding: 20px
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.17)
+  z-index: 1
   &__heading
     color: #232323
     font-family: lato-regular
@@ -123,6 +124,8 @@
     text-decoration: none
     color: #4f4f4f
     font-family: lato-regular
+    &:hover
+      color: #f16d7f
 
 .summary__basket
   display: block
@@ -152,19 +155,37 @@
   margin: 0 auto
   &__list
     list-style-type: none
+    position: relative
 
 .mega__box
-  display: none
+  display: flex
   border: 1px solid #e8e8e8
   background-color: #ffffff
   padding: 20px
   border-radius: 5px
   position: absolute
-  &__list
+  &__heading
+    width: 235px
+    border-bottom: 1px solid #e8e8e8
+    margin-bottom: 8px
+    font-family: lato-regular
+    font-size: 14px
+    font-weight: 400
+    text-transform: uppercase
+  &__item
     display: flex
     flex-direction: column
-  &__item
+  &__link
     text-decoration: none
+    color: #646464
+    font-family: lato-regular
+    font-size: 14px
+    font-weight: 400
+    line-height: 28px
+    letter-spacing: 0.35px
+    text-transform: capitalize
+    &:hover
+      color: #f16d7f
 
 .banner
   background-color: #e8e8e8
@@ -284,8 +305,8 @@
         font-size: 16px
         font-weight: 700
         text-transform: uppercase
-        &::hover
-          border: 2px solid #222222 !important
+        &:hover
+          border: 2px solid #222222
     &__item
       width: 100%
       height: 100%
