--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -175,6 +175,9 @@
   &__item
     display: flex
     flex-direction: column
+    margin-right: 46px
+    &:last-of-type
+      margin-right: 0
   &__link
     text-decoration: none
     color: #646464
