--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -156,14 +156,35 @@
   &__list
     list-style-type: none
     position: relative
-
+    &:hover .mega__box
+      display: flex
+    &__last
+      &:hover .mega__box
+        right: 0
+        left: auto
+      &:hover .mega__box::before
+        right: 26px
+        left: auto
 .mega__box
-  display: flex
+  display: none
   border: 1px solid #e8e8e8
   background-color: #ffffff
   padding: 20px
   border-radius: 5px
   position: absolute
+  margin-top: 5px
+  &:before
+    content: ''
+    display: block
+    width: 12px
+    height: 12px
+    background-color: #ffffff
+    position: absolute
+    transform: rotate(45deg)
+    top: -7px
+    left: 20px
+    border-left: 1px solid #e8e8e8
+    border-top: 1px solid #e8e8e8
   &__heading
     width: 235px
     border-bottom: 1px solid #e8e8e8
@@ -267,52 +288,71 @@
     margin-top: 20px
 
 .cards
-  height: 935px
-  &__head
-    display: flex
-    flex-direction: column
-    align-items: center
   &__heading
+    text-align: center
     color: #222222
     font-size: 30px
     line-height: 54px
     letter-spacing: 0.75px
   &__paragraph
+    text-align: center
     color: #9f9f9f
     font-size: 14px
     letter-spacing: 0.35px
-  &__up
+  &__list
     display: flex
     flex-wrap: wrap
     justify-content: space-between
+    margin-bottom: 65px
+  &__item
+    width: 263px
     margin-top: 60px
-  &__down
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    margin-top: 110px
-  &__product
-    width: 261px
-    height: 279px
-    &__text
-      padding-left: 20px
-      padding-top: 20px
-      color: #222222
-      font-size: 13px
+    position: relative
+    &:hover
+      box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16)
+      background-color: #ffffff
+    &:hover .cards__img
+      filter: brightness(30%)
+    &:hover .cards__add
+      display: flex
+  &__link
+    text-decoration: none
+  &__img
+    width: 100%
+  &__price
+    padding: 15px
+  &__text
+    color: #222222
+    font-size: 13px
+    font-weight: 400
+    text-transform: uppercase
+    margin-bottom: 17px
+    &__red
+      color: #f16d7f
+      font-size: 16px
+      font-weight: 700
       text-transform: uppercase
-      &__red
-        padding-left: 20px
-        padding-top: 20px
-        height: 15px
-        color: #f16d7f
-        font-size: 16px
-        font-weight: 700
-        text-transform: uppercase
-        &:hover
-          border: 2px solid #222222
-    &__item
-      width: 100%
-      height: 100%
+  &__add
+    position: absolute
+    top: 98px
+    display: none
+    justify-content: center
+    width: 100%
+    &__link
+      border: 1px solid #ffffff
+      padding: 10px
+      display: flex
+      justify-content: center
+      align-items: center
+      text-decoration: none
+      &:hover
+        box-shadow: 0 0 10px #ffffff
+    &__img
+    &__text
+      color: #ffffff
+      font-family: lato-bold
+      font-size: 13px
+      margin-left: 8px
 
 .button__product
   display: flex
