--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -27,10 +27,11 @@
     font-weight: 300
     line-height: 32px
     letter-spacing: 0.35px
-    border-top-left-radius: 0
-    border-bottom-left-radius: 0
-    border-top-right-radius: 0
-    border-bottom-right-radius: 0
+    // border-top-left-radius: 0
+    // border-bottom-left-radius: 0
+    // border-top-right-radius: 0
+    // border-bottom-right-radius: 0
+    border-radius: 0 0 0 0
   &__right
     display: flex
     align-items: flex-end
@@ -413,41 +414,71 @@
   height: 438px
   background-size: cover
   margin-bottom: 120px
+  display: grid
   &__item
-    display: flex
-    justify-content: space-between
-    height: 100%
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+    justify-items: center
     align-items: center
   &__left
-    display: flex
-    flex-direction: column
-    justify-content: center
-    width: 50%
-    height: 100%
+    display: grid
+    grid-template-columns: 110px 386px 72px
+    grid-template-rows: 83px 20px
+    padding-top: 130px
     border-right: 1px solid #ffffff
-  &__form
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    width: 50%
     height: 100%
+  &__grid
+    &__img
+      display: grid
+      grid-column: 1/2
+    &__text
+      color: #222224
+      font-size: 14px
+      font-style: italic
+      line-height: 26px
+      letter-spacing: 0.4px
+      display: grid
+      grid-column: 2/3
+      grid-row: 1/3
+    &__sing1
+      color: #f16d7f
+      display: grid
+      grid-column: 2/3
+      grid-row: 2/3
+    &__sing2
+      display: grid
+      grid-column: 2/3
+      grid-row: 3/3
+      color: #222224
+      font-size: 12px
+      font-weight: 300
+      letter-spacing: 0.3px
+      line-height: 14px
+  &__form
+    &__all
+      font-size: 0
+    &__mail
+      width: 282px
+      height: 46px
+      background-color: #e1e1e1
+      border: none
+      border-radius: 23px 0 0 23px
+    &__button
+      width: 104px
+      height: 46px
+      border-radius: 0 23px 23px 0
+      background-color: #f16d7f
+      border: none
     &__heading
+      color: #222224
       font-size: 24px
-      font-family: lato-regular
       letter-spacing: 0.6px
       line-height: 54px
       text-transform: uppercase
-  &__comment
-    display: flex
-  &__text
-    color: #222224
-    font-size: 14px
-    font-style: italic
-    line-height: 26px
-    letter-spacing: 0.4px
-    width: 386px
-    padding-left: 24px
+    &__text
+      color: #222224
+      font-size: 14px
+      padding-bottom: 35px
 
 .footer
   &__list
@@ -467,12 +498,17 @@
     font-size: 18px
     line-height: 26px
     text-transform: uppercase
+    padding-bottom: 45px
+    padding-top: 14px
   &__link
     text-decoration: none
     color: #898989
     font-size: 16px
     letter-spacing: 0.4px
     line-height: 42px
+    text-transform: capitalize
+    &:hover
+      color: #f16d7f
   &__list1
     display: flex
     flex-direction: column
