--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -422,8 +422,9 @@
     align-items: center
   &__left
     display: grid
-    grid-template-columns: 110px 386px 72px
+    grid-template-columns: 1fr auto 31px
     grid-template-rows: 83px 20px
+    grid-column-gap: 28px
     padding-top: 130px
     border-right: 1px solid #ffffff
     height: 100%
@@ -433,10 +434,9 @@
       grid-column: 1/2
     &__text
       color: #222224
-      font-size: 14px
+      font-size: 16px
       font-style: italic
       line-height: 26px
-      letter-spacing: 0.4px
       display: grid
       grid-column: 2/3
       grid-row: 1/3
@@ -455,6 +455,7 @@
       letter-spacing: 0.3px
       line-height: 14px
   &__form
+    text-align: center
     &__all
       font-size: 0
     &__mail
@@ -463,17 +464,25 @@
       background-color: #e1e1e1
       border: none
       border-radius: 23px 0 0 23px
+      opacity: 0.67
+      color: #222224
+      font-size: 14px
+      letter-spacing: 0.35px
+      padding-left: 28px
     &__button
       width: 104px
       height: 46px
       border-radius: 0 23px 23px 0
       background-color: #f16d7f
       border: none
+      color: #ffffff
+      font-size: 14px
+      letter-spacing: 0.35px
     &__heading
       color: #222224
       font-size: 24px
       letter-spacing: 0.6px
-      line-height: 54px
+      line-height: 41px
       text-transform: uppercase
     &__text
       color: #222224
