--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -571,6 +571,7 @@
 .product__banner
   background-color: #f8f3f4
   height: 148px
+  margin-bottom: 70px
   &__container
     height: 100%
   &__content
@@ -609,6 +610,8 @@
     display: grid
     grid-template-columns: 1fr 4fr
   &__menu
+    width: 293px
+    padding-right: 10px
     &__side
       display: grid
       grid-template-rows: repeat(3, max-content)
@@ -617,14 +620,26 @@
       list-style-type: none
       border-left: 5px solid #ef5b70
       border-bottom: 1px solid #ebebeb
-      &__link
-        text-decoration: none
-        color: #6f6e6e
-        font-size: 14px
-        font-weight: 700
-        line-height: 20px
-        text-transform: uppercase
-        padding: 20px
+    &__link
+      text-decoration: none
+      color: #6f6e6e
+      font-size: 14px
+      font-weight: 700
+      line-height: 20px
+      text-transform: uppercase
+      padding: 20px
+      display: grid
+      grid-template-columns: 1fr 1fr
+      &::-webkit-details-marker
+        display: none
+      &:after
+        content: '▼'
+        padding-left: 50%
+        font-size: 9px
+        color: #838383
+        display: grid
+        justify-content: end
+
   &__price
     display: grid
     grid-template-columns: repeat(3, max-content)
@@ -634,9 +649,47 @@
       display: grid
       grid-column: 1/4
       grid-template-columns: repeat(3, 1fr)
+      grid-template-rows: repeat(2, max-content)
       &__trending
         display: grid
-        grid-template-rows: repeat(3, 1fr)
+      &__paragraph
+        grid-column: 1/2
+        font-size: 14px
+        font-weight: bold
+        line-height: 1.43
+        color: #6f6e6e
+        text-transform: uppercase
+        padding-bottom: 25px
+      &__list
+        display: grid
+        grid-template-columns: 25% 20% 25%
+        grid-column-gap: 5px
+      &__link
+        text-decoration: none
+        font-size: 14px
+        color: #6f6e6e
+        line-height: 1.8
+    &__sort
+      display: grid
+      grid-template-columns: repeat(4,10%)
+      grid-column: 1/4
+      background-color: #f3f3f3
+      height: 50px
+      align-items: center
+    &__paragraph, &__sortby
+      border: 1px solid #ebebeb
+      background-color: $white
+      color: #6f6e6e
+      padding: 5px 10px
+    &__summary1, &__summary2
+      display: block
+      &::-webkit-details-marker
+        display: none
+      &:after
+        content: '▼'
+        padding-left: 0.5em
+        font-size: 9px
+        color: #838383
 
 .product__bigbanner
   background-color: #222224
