--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -36,6 +36,7 @@
       border-top-right-radius: 0
       border-bottom-right-radius: 0
       padding-top: 2px
+      cursor: pointer
   &__summary-search
     display: block
     color: $dark
@@ -47,8 +48,10 @@
     &::after
       content: '▼'
       padding-left: 0.5em
-      font-size: 9px
+      font-size: 8px
       color: #838383
+    &:hover
+      color: $accent
   &__text
     width: 281px
     height: 38px
@@ -77,7 +80,14 @@
   &__right
     display: flex
     align-items: flex-end
-
+.header__form_browse[open] > .header__summary-search
+  &:after
+    content: '▲'
+    color: $accent
+    font-size: 8px
+.header__form_browse[open] > .header__summary-search
+  &:before
+    display: none
 .button__logo
   width: 130px
   height: 38px
@@ -127,7 +137,7 @@
   &::after
     content: '▼'
     padding-left: 0.5em
-    font-size: 9px
+    font-size: 8px
     color: $light
 .header-nav
   display: grid
@@ -608,6 +618,7 @@
     grid-gap: 18px
     &_list
       list-style-type: none
+      cursor: pointer
     &_link
       text-decoration: none
       color: #6f6e6e
@@ -632,6 +643,17 @@
         align-items: center
       &:hover
         color: #ef5b70
+    &_list[open] > .product-promo__menu_link
+      &:after
+        content: '▲'
+        color: $accent
+        font-size: 9px
+        display: grid
+        justify-content: end
+        align-items: center
+    &_list[open] > .product-promo__menu_link
+      &:before
+        display: none
   &__price
     display: grid
     grid-template-columns: repeat(3, max-content)
@@ -659,13 +681,16 @@
       grid-column-gap: 5px
     &_list1
       grid-template-columns: repeat(4,46px)
+      grid-column-gap: 20px
     &_link
       text-decoration: none
       font-size: 14px
       color: #6f6e6e
+      &:hover
+        color: $accent
     &_sort
       display: grid
-      grid-template-columns: repeat(4,67px 86px)
+      grid-template-columns: repeat(1, 19% 19%)
       grid-column: 1/4
       background-color: #f3f3f3
       height: 50px
@@ -676,6 +701,9 @@
       color: #6f6e6e
       padding: 5px 10px
       font-size: 14px
+    &_block
+      display: grid
+      grid-template-columns: 67px 86px
     &_summary1, &_summary2
       display: block
       &::-webkit-details-marker
@@ -683,7 +711,7 @@
       &:after
         content: '▼'
         padding-left: 0.5em
-        font-size: 9px
+        font-size: 8px
         color: #838383
   &__dropdown
     border-radius: 0
@@ -718,12 +746,14 @@
     &__paragraph
       display: grid
       padding-left: 0px
-
+//
+// checkbox
+//
 .control
   font-family: lato
   display: block
   position: relative
-  padding-left: 20px
+  padding-left: 25px
   margin-bottom: 5px
   padding-top: 1px
   cursor: pointer
@@ -735,10 +765,10 @@
 
 .control_indicator
   position: absolute
-  top: 2px
+  top: 3px
   left: 0
-  height: 15px
-  width: 15px
+  height: 13px
+  width: 13px
   background: #ffffff
   border: 1px solid #ebebeb
   border-radius: 0px
@@ -777,8 +807,8 @@
 
 .control-checkbox
   .control_indicator:after
-    left: 5px
-    top: 2px
+    left: 4px
+    top: 1px
     width: 2px
     height: 5px
     border: solid #ffffff
@@ -787,5 +817,88 @@
 
   input:disabled ~ .control_indicator:after
     border-color: #7b7b7b
+//
+//range
+//
+//
+
+input[type=range]
+  -webkit-appearance: none
+  margin: 10px 0
+  width: 100%
+
+  &:focus
+    outline: none
+
+  &::-webkit-slider-runnable-track
+    width: 100%
+    height: 6px
+    cursor: pointer
+    animate: 0.2s
+    box-shadow: 0px 0px 0px #000000
+    background: #f0f0f0
+    border-radius: 3px
+    border: 0px solid #000000
+
+  &::-webkit-slider-thumb
+    box-shadow: 0px 0px 1px #000000
+    border: 0px solid #000000
+    height: 18px
+    width: 18px
+    border-radius: 10px
+    background: #f16d7f
+    cursor: pointer
+    -webkit-appearance: none
+    margin-top: -6px
+
+  &:focus::-webkit-slider-runnable-track
+    background: #f0f0f0
+
+  &::-moz-range-track
+    width: 100%
+    height: 6px
+    cursor: pointer
+    animate: 0.2s
+    box-shadow: 0px 0px 0px #000000
+    background: #f0f0f0
+    border-radius: 3px
+    border: 0px solid #000000
+
+  &::-moz-range-thumb
+    box-shadow: 0px 0px 1px #000000
+    border: 0px solid #000000
+    height: 18px
+    width: 18px
+    border-radius: 10px
+    background: #f16d7f
+    cursor: pointer
+
+  &::-ms-track
+    width: 100%
+    height: 6px
+    cursor: pointer
+    animate: 0.2s
+    background: transparent
+    border-color: transparent
+    color: transparent
+
+  &::-ms-fill-lower, &::-ms-fill-upper
+    background: #f0f0f0
+    border: 0px solid #000000
+    border-radius: 6px
+    box-shadow: 0px 0px 0px #000000
+
+  &::-ms-thumb
+    box-shadow: 0px 0px 1px #000000
+    border: 0px solid #000000
+    height: 18px
+    width: 18px
+    border-radius: 10px
+    background: #f16d7f
+    cursor: pointer
+
+  &:focus
+    &::-ms-fill-lower, &::-ms-fill-upper
+      background: #f0f0f0
 
 @import "media"
