--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -621,7 +621,7 @@
     width: 293px
     display: grid
     grid-template-rows: repeat(3, max-content)
-    grid-gap: 18px
+    grid-gap: 26px
     &_list
       list-style-type: none
       cursor: pointer
@@ -674,6 +674,7 @@
       grid-row-gap: 41px
     &_filter-trending
       display: grid
+      grid-template-rows: repeat(2,1fr)
     &_filter-paragraph
       grid-column: 1/2
       font-size: 14px
@@ -681,6 +682,9 @@
       color: #6f6e6e
       text-transform: uppercase
       padding-bottom: 25px
+    &_filter-price
+      display: grid
+      grid-template-rows: 34px 1fr
     &_list
       display: grid
       grid-template-columns: 25% 20% 25%
@@ -720,6 +724,8 @@
       grid-template-columns: 1fr 1fr
       font-size: 14px
       color: #6f6e6e
+    &_cent-input
+      grid-column: 1/3
     &_cent2
       display: grid
       justify-content: end
@@ -738,15 +744,26 @@
     justify-content: space-between
   &__down-menu
     display: grid
-    grid-template-columns: 1fr 1fr
+    grid-template-columns: 260px 3fr
+    grid-template-rows: 44px
     margin-top: 45px
     margin-bottom: 110px
     &_left
+      border: 1px solid #ebebeb
+      display: grid
+      grid-template-columns: repeat(8, max-content)
+      grid-column-gap: 16px
+      align-items: center
+      justify-content: center
+    &_button-number
+      font-size: 16px
+      color: #c4c4c4
+      text-decoration: none
     &_right
       display: grid
       justify-content: end
     &_button
-      padding: 15px 47px
+      padding: 0px 47px
       border: 1px solid $accent
       font-size: 16px
       background-color: #fff
@@ -779,6 +796,93 @@
     &__paragraph
       display: grid
       padding-left: 0px
+
+.shop-cart
+  &__product
+    display: grid
+    &_head-left
+      padding-bottom: 20px
+      border-bottom: 1px solid #eaeaea
+      text-transform: uppercase
+      font-size: 13px
+    &_head
+      padding-bottom: 20px
+      border-bottom: 1px solid #eaeaea
+      text-align: center
+      text-transform: uppercase
+      font-size: 13px
+    &_details
+      display: grid
+      grid-template-columns: 533px repeat(5,1fr)
+    &_details-img
+      grid-row: 1/4
+    &_details1
+      display: grid
+      grid-template-rows: repeat(3,1fr)
+      grid-template-columns: 100px 433px repeat(5,1fr)
+      font-size: 13px
+      border-bottom: 1px solid #eaeaea
+      padding-bottom: 26px
+      padding-top: 26px
+    &_details-desc1
+      grid-column: 2/3
+    &_details-desc2
+      grid-column: 2/3
+    &_details-desc3
+      grid-column: 2/3
+    &_details-desc4
+      grid-row: 2/3
+      grid-column: 3/4
+      justify-self: center
+    &_details-desc5
+      grid-row: 2/3
+      grid-column: 4/5
+      justify-self: center
+    &_details-desc6
+      grid-row: 2/3
+      grid-column: 5/6
+      justify-self: center
+    &_details-desc7
+      grid-row: 2/3
+      grid-column: 6/7
+      justify-self: center
+    &_details-desc8
+      grid-row: 2/3
+      grid-column: 7/8
+      justify-self: center
+    &_details2
+      display: grid
+      grid-template-rows: repeat(3,1fr)
+      grid-template-columns: 1fr 1fr
+    &_details3
+      display: grid
+      grid-template-rows: repeat(3,1fr)
+      grid-template-columns: 1fr 1fr
+    &_price
+      display: grid
+      grid-template-rows: repeat(4,max-content)
+      grid-row-gap: 80px
+      text-align: center
+    &_quantity
+      display: grid
+      grid-template-rows: repeat(4,max-content)
+      grid-row-gap: 80px
+      text-align: center
+    &_shipping
+      display: grid
+      grid-template-rows: repeat(4,max-content)
+      grid-row-gap: 80px
+      text-align: center
+    &_subtotal
+      display: grid
+      grid-template-rows: repeat(4,max-content)
+      grid-row-gap: 80px
+      text-align: center
+    &_action
+      display: grid
+      grid-template-rows: repeat(4,max-content)
+      grid-row-gap: 80px
+      text-align: center
 //
 // checkbox
 //
