--- a/src/css/fonts.sass
+++ b/src/css/fonts.sass
@@ -13,3 +13,7 @@
 @font-face
 	font-family: 'lato-regular'
 	src: url('../fonts/Lato-Regular.ttf') format('opentype')
+
+@font-face
+	font-family: 'lato-bold'
+	src: url('../fonts/Lato-Bold.ttf') format('opentype')
