--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -805,12 +805,14 @@
       border-bottom: 1px solid #eaeaea
       text-transform: uppercase
       font-size: 13px
+      font-family: lato-bold
     &_head
       padding-bottom: 20px
       border-bottom: 1px solid #eaeaea
       text-align: center
       text-transform: uppercase
       font-size: 13px
+      font-family: lato-bold
     &_details
       display: grid
       grid-template-columns: 533px repeat(5,1fr)
@@ -827,20 +829,28 @@
       padding-bottom: 26px
       padding-top: 26px
       align-items: center
-    &_details-head1
-      color: #222222
     &_details-head
-      color: #656565
+      color: #575757
     &_details-font
       justify-self: center
       color: #656565
     &_details-desc1
       grid-column: 2/3
+      color: #222222
+      text-transform: uppercase
+      padding-left: 20px
     &_details-desc2
       grid-column: 2/3
+      align-self: end
+      font-weight: 300
+      color: #6f6e6e
+      padding-left: 20px
     &_details-desc3
       grid-column: 2/3
-      align-items: start !important
+      align-self: start
+      color: #656565
+      padding-top: 5px
+      padding-left: 20px
     &_details-desc4
       grid-row: 2/3
       grid-column: 3/4
@@ -897,7 +907,7 @@
     &_button1
       font-size: 14px
       line-height: 1.2
-      font-weight: 700
+      font-family: lato-bold
       text-transform: uppercase
       color: #4a4a4a
       padding: 20px
@@ -915,11 +925,15 @@
       grid-template-rows: 15px repeat(3, 45px)
       grid-template-columns: 355px
       grid-row-gap: 20px
+      margin-bottom: 80px
     &_adress
       font-size: 16px
       font-family: lato-bold
       color: $dark
       text-transform: uppercase
+    &_adress-little
+      font-size: 14px
+      color: #000
     &_form-control
       position: relative
       border: 1px solid #eaeaea
@@ -947,8 +961,17 @@
       border-color: #838383 transparent transparent transparent
       right: 12px
       bottom: 17px
+    &_form-input
+      border: 1px solid #eaeaea
+      padding-left: 18px
+      outline: none
+      font-size: 13px
+      font-weight: 300
+      color: #b1b1b1
+    &_form-input input:-webkit-autofill
+      -webkit-text-fill-color: #ED4159
     &_form-button
-      padding: 12px
+      padding: 10px
       font-size: 11px
       font-family: lato-bold
       color: #4a4a4a
@@ -956,11 +979,56 @@
       text-transform: uppercase
       border: 1px solid #eaeaea
       max-width: 100px
+    &_form-button-size
+      max-width: 118px
+      height: 35px
     &_form-center
       display: grid
-      grid-template-rows: repeat(4, 45px)
+      grid-template-rows: 16px 20px repeat(2,45px)
+      grid-row-gap: 25px
     &_form-right
       background-color: #f5f3f3
+      height: 214px
+    &_form-right-content
+      padding: 40px
+      display: grid
+    &_form-right-text
+      display: grid
+      grid-template-columns: repeat(2,max-content)
+      grid-column-gap: 20px
+      justify-content: end
+      font-size: 11px
+      color: #4a4a4a
+      text-transform: uppercase
+      padding-bottom: 14px
+    &_form-right-text1
+      display: grid
+      grid-template-columns: repeat(2,max-content)
+      grid-column-gap: 20px
+      justify-content: end
+      border-bottom: 1px solid #e2e2e2
+      padding-bottom: 22px
+    &_form-right-grand
+      font-size: 16px
+      color: $dark
+      font-family: lato-bold
+      text-transform: uppercase
+    &_form-right-grand1
+      color: $accent
+    &_form-right-button
+      margin-top: 17px
+      padding: 16px
+      font-size: 16px
+      font-family: lato-bold
+      color: $white
+      background-color: $accent
+      border: 0
+      text-transform: uppercase
+      cursor: pointer
+      &:active
+        background-color: $white
+        color: $accent
+
 //
 // checkbox
 //
