--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -492,6 +492,10 @@
       color: $light
       font-size: 14px
       letter-spacing: 0.35px
+      cursor: pointer
+      &:hover
+        background-color: $light
+        color: $accent
     &__heading
       color: #222224
       font-size: 24px
@@ -857,6 +861,8 @@
     &_details-desc5
       grid-row: 2/3
       grid-column: 4/5
+      border: 1px solid #eaeaea
+      padding: 6px 22px
     &_details-desc6
       grid-row: 2/3
       grid-column: 5/6
@@ -1029,6 +1035,122 @@
         background-color: $white
         color: $accent
 
+.single
+  border: solid 1px #eaeaea
+  background-color: #f7f7f7
+  height: 777px
+  &__content
+    background: url("/build/img/single_bg.png") no-repeat
+    background-size: 40%
+    background-position: center
+    display: grid
+    height: 100%
+    position: relative
+    &_collection
+      height: 730px
+      background-color: $white
+      border: 1px solid #eaeaea
+      position: relative
+      top: -83px
+    &_btn
+      display: grid
+      grid-template-columns: 47px 47px
+      grid-template-rows: 47px
+      justify-content: space-between
+      align-content: center
+    &_btn-left
+      background-color: #d8d8d8
+      border: none
+      width: 47px
+      height: 47px
+      font-size: 1.5vw
+      color: #FFFFFF
+      cursor: pointer
+    &_btn-right
+      background-color: #d8d8d8
+      border: none
+      width: 47px
+      height: 47px
+      font-size: 1.5vw
+      color: #FFFFFF
+      cursor: pointer
+    &_collection-text
+      display: grid
+      justify-items: center
+      justify-content: center
+      grid-template-rows: repeat(2, max-content)
+      grid-row-gap: 17px
+    &_collection-top
+      font-family: lato-bold
+      font-size: 14px
+      line-height: 1.71
+      color: $accent
+      border-bottom: 1px solid #eaeaea
+      text-transform: uppercase
+      position: relative
+      padding-top: 73px
+      padding-bottom: 15px
+    &_collection-border
+      position: relative
+      border: 2px solid $accent
+      width: 63px
+      top: -20px
+    &_collection-head
+      font-size: 18px
+      font-weight: 900
+      line-height: 1.33
+      color: #4d4d4d
+      text-transform: uppercase
+    &_collection-actualize
+      display: grid
+      grid-template-columns: 640px
+      text-align: center
+      font-size: 14px
+      line-height: 1.71
+      color: #5e5e5e
+      padding-top: 67px
+    &_collection-material
+      display: grid
+      grid-template-columns: repeat(2,1fr)
+      justify-content: center
+      font-size: 14px
+      font-family: lato-bold
+      text-transform: uppercase
+      color: #b9b9b9
+      padding-top: 28px
+    &_collection-span
+      color: #2f2f2f
+    &_collection-price
+      display: grid
+      grid-template-columns: 642px
+      text-align: center
+      font-size: 24px
+      font-family: lato-bold
+      line-height: 1
+      padding-top: 37px
+      padding-bottom: 43px
+      color: $accent
+      border-bottom: 1px solid #eaeaea
+    &_choice
+      display: grid
+      grid-template-columns: repeat(3,150px)
+      grid-template-rows: repeat(2,1fr)
+      grid-row-gap: 30px
+      grid-column-gap: 52px
+    &_choice1
+      display: grid
+      grid-template-rows: 1fr 1fr
+      grid-row-gap: 10px
+    &_choice2
+      display: grid
+      grid-template-rows: 1fr 1fr
+      grid-row-gap: 10px
+    &_choice3
+      display: grid
+      grid-template-rows: 1fr 1fr
+      grid-row-gap: 10px
+    &_choice-button
+      grid-column: 1/4
 //
 // checkbox
 //
