--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -20,6 +20,7 @@
     text-decoration: none
     margin-left: 13px
     margin-right: 37px
+    cursor: pointer
     &_other-color
       color: $accent
       font-family: lato-black
@@ -70,6 +71,7 @@
     line-height: 32px
     letter-spacing: 0.35px
     border-radius: 0 0 0 0
+    outline: none
   &__button-search
     width: 36px
     border-radius: 0 3px 3px 0
@@ -78,6 +80,7 @@
     border-left-color: transparent
     border-top-left-radius: 0
     border-bottom-left-radius: 0
+    cursor: pointer
   &__button-lens
     width: 16px
     padding-top: 4px
@@ -306,13 +309,14 @@
     font-size: 14px
     letter-spacing: 0.35px
   &__list
-    display: flex
-    flex-wrap: wrap
+    display: grid
+    grid-template-columns: repeat(4,max-content)
+    grid-template-rows: repeat(3,max-content)
     justify-content: space-between
-    margin-bottom: 65px
+    grid-row-gap: 65px
+    padding-top: 65px
   &__item
     width: 263px
-    margin-top: 60px
     position: relative
     &:hover
       box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16)
@@ -359,26 +363,23 @@
       font-family: lato-bold
       font-size: 13px
       margin-left: 8px
-
-.button__product
-  display: flex
-  justify-content: center
-  &__text
-    padding: 15px
-    background-color: $accent
-    border: transparent
-  &__sum
-    display: block
-    color: $light
-    font-size: 16px
-    font-weight: 700
-    letter-spacing: 0.4px
-    &::-webkit-details-marker
-      display: none
-    &::after
-      content: '\2192'
-      padding-left: 0.5em
+  &__button-product
+    display: grid
+    justify-content: center
+    &_text
       color: $light
+      font-size: 16px
+      font-weight: 700
+      letter-spacing: 0.4px
+      padding: 15px
+      background-color: $accent
+      border: 0
+      &::-webkit-details-marker
+        display: none
+      &::after
+        content: '\2192'
+        padding-left: 0.5em
+        color: $light
 
 .bigbanner
   margin: 100px auto
@@ -583,7 +584,6 @@
 .product__banner
   background-color: #f8f3f4
   height: 148px
-  margin-bottom: 70px
   &__container
     height: 100%
   &__content
@@ -618,13 +618,14 @@
         color: $accent
 
 .product-promo
+  padding-top: 70px
   &__content
     display: grid
     grid-template-columns: 1fr 4fr
   &__menu
-    width: 293px
     display: grid
     grid-template-rows: repeat(3, max-content)
+    grid-template-columns: 293px
     grid-gap: 26px
     &_list
       list-style-type: none
@@ -745,7 +746,10 @@
   &__cards
     display: grid
     grid-template-columns: repeat(3,max-content)
+    grid-template-rows: repeat(3,max-content)
     justify-content: space-between
+    grid-row-gap: 65px
+    padding-top: 65px
   &__down-menu
     display: grid
     grid-template-columns: 260px 3fr
@@ -802,6 +806,7 @@
       padding-left: 0px
 
 .shop-cart
+  padding-top: 70px
   &__product
     display: grid
     &_head-left
@@ -1108,7 +1113,7 @@
       font-size: 14px
       line-height: 1.71
       color: #5e5e5e
-      padding-top: 67px
+      padding-top: 50px
     &_collection-material
       display: grid
       grid-template-columns: repeat(2,1fr)
@@ -1117,7 +1122,7 @@
       font-family: lato-bold
       text-transform: uppercase
       color: #b9b9b9
-      padding-top: 28px
+      padding-top: 10px
     &_collection-span
       color: #2f2f2f
     &_collection-price
@@ -1127,30 +1132,67 @@
       font-size: 24px
       font-family: lato-bold
       line-height: 1
-      padding-top: 37px
-      padding-bottom: 43px
+      padding-top: 20px
+      padding-bottom: 26px
       color: $accent
       border-bottom: 1px solid #eaeaea
     &_choice
       display: grid
       grid-template-columns: repeat(3,150px)
-      grid-template-rows: repeat(2,1fr)
+      grid-template-rows: 1fr 55px
       grid-row-gap: 30px
       grid-column-gap: 52px
     &_choice1
       display: grid
       grid-template-rows: 1fr 1fr
-      grid-row-gap: 10px
     &_choice2
       display: grid
       grid-template-rows: 1fr 1fr
-      grid-row-gap: 10px
     &_choice3
       display: grid
       grid-template-rows: 1fr 1fr
-      grid-row-gap: 10px
     &_choice-button
       grid-column: 1/4
+      border: 1px solid $accent
+      display: grid
+      justify-content: center
+      align-items: center
+      grid-template-columns: repeat(2,max-content)
+      grid-column-gap: 15px
+      color: $accent
+      background-color: $white
+      font-size: 16px
+      font-family: lato-bold
+      cursor: pointer
+      &:hover
+        color: $white
+        background-color: $accent
+    &_choice-head
+      font-size: 14px
+      font-family: lato-bold
+      line-height: 1.71
+      text-transform: uppercase
+      color: #2f2f2f
+    &_choice-select
+      display: grid
+      grid-template-rows: 35px
+
+.single-card
+  &__content
+    display: grid
+    grid-template-columns: repeat(4,max-content)
+    grid-template-rows: repeat(2,max-content)
+    justify-content: space-between
+    grid-row-gap: 70px
+    padding-bottom: 70px
+    &_head
+      font-size: 24px
+      font-weight: 900
+      line-height: 0.83
+      color: #4d4d4d
+      grid-column: 1/5
+      justify-self: center
+      text-transform: uppercase
 //
 // checkbox
 //
