--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1164,7 +1164,9 @@
       font-size: 16px
       font-family: lato-bold
       cursor: pointer
-      &:hover
+      &:hover,
+      &:focus,
+      &:active
         color: $white
         background-color: $accent
     &_choice-head
@@ -1193,6 +1195,79 @@
       grid-column: 1/5
       justify-self: center
       text-transform: uppercase
+
+.checkout
+  &__accordion
+    &_label
+      position: relative
+      color: $dark
+      margin: 0
+      padding: 10px 10px 10px 50px
+      display: block
+      width: 100%
+      cursor: pointer
+      border-bottom: 1px solid
+      &:hover
+        background: #ffffff
+        color: #1e1e1e
+    &_content
+      padding: 0px 15px
+      margin: 5px 0
+      width: 100% !important
+      height: 0
+      overflow: hidden
+      position: relative
+      opacity: 0
+      -webkit-transition: .3s ease
+      -moz-transition: .3s ease
+      -o-transition: .3s ease
+      transition: .3s ease
+    &_input:checked ~ .checkout__accordion_content
+      height: auto
+      opacity: 1
+      padding: 15px
+      border-bottom: 1px solid
+    &_input:checked ~ .checkout__accordion_label
+      color: $dark
+      border-bottom: 0
+    &_input
+      display: none
+    &_content-item
+
+.radiobtn
+  position: absolute
+  z-index: -1
+  opacity: 0
+  + label
+    position: relative
+    padding: 0 0 0 30px
+    cursor: pointer
+    &:before
+      content: " "
+      position: absolute
+      top: 4px
+      left: 0
+      width: 14px
+      height: 14px
+      border-radius: 50%
+      border: 2px solid #555555
+      background: #ffffff
+    &:after
+      content: " "
+      position: absolute
+      top: 8px
+      left: 4px
+      width: 6px
+      height: 6px
+      border-radius: 50px
+      background: #555555
+      box-shadow: 0px 0px 2px 1px #767676 inset
+      opacity: 0
+      transition: .2s
+  &:checked + label:after
+    opacity: 1
+  &:focus + label:before
+    box-shadow: 0px 0px 4px 1px #4d4438
 //
 // checkbox
 //
@@ -1204,7 +1279,6 @@
   margin-bottom: 5px
   padding-top: 1px
   cursor: pointer
-
   input
     position: absolute
     z-index: -1
