--- a/src/css/media.sass
+++ b/src/css/media.sass
@@ -4,6 +4,7 @@
 
   .header__text
     grid-template-columns: max-content
+    width: 170px
 
   .cards__list
     grid-template-columns: repeat(3,max-content)
@@ -32,6 +33,60 @@
       &_paragraph
         letter-spacing: none
 
+  .feedback__grid__text
+    font-size: 14px
+
+  .footer
+    &__heading
+      font-size: 14px
+    &__list
+      grid-template-columns: 2fr 1fr 1fr 1fr
+
 @media (min-width: 375px) and (max-width: 768px)
   .cards__list
     grid-template-columns: repeat(2,max-content)
+
+  .product-promo
+    &__content
+      grid-template-columns: 1fr
+    &__menu
+      grid-template-columns: repeat(3,1fr)
+      grid-template-rows: 1fr
+      padding-bottom: 50px
+    &__cards
+      grid-template-columns: repeat(2, max-content)
+      justify-content: space-around
+
+  .single-card
+    &__content
+      grid-template-columns: repeat(2,max-content)
+      justify-content: space-around
+      &_head
+        grid-column: 1/3
+
+  .shop-cart
+    &__product
+      &_button1
+        font-size: 9px
+      &_form-right-button
+        font-size: 11px
+  .bigbanner
+    &__item
+      grid-template-columns: 1fr
+    &__right
+      width: 60%
+      justify-self: center
+      grid-row-gap: 10px
+      padding: 20px 0
+      &__content
+        grid-row-gap: 10px
+
+  .feedback
+    margin-bottom: 20px
+    &__left
+      grid-template-columns: 1fr auto
+    &__grid
+      &__sing1
+        padding-top: 20px
+    &__form__mail
+      width: 225px
