--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -491,6 +491,8 @@
       text-decoration: none
       background: none
       cursor: pointer
+      color: $white
+      font-family: Lato
       &:hover
         box-shadow: 0 0 10px $light
     &__img
